// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CF Writer App - Application Frontend Generate deployment configs - HTML5 App and destination read from ui5.yaml 1`] = `
"_schema-version: '3.2'
ID: basicapp
description: Generated by Fiori Tools
version: 0.0.1
parameters:
  enable-parallel-deployments: true
  deploy_mode: html5-repo
modules:
  - name: basicapp-app-content
    type: com.sap.application.content
    path: .
    requires:
      - name: basicapp-app-front
        parameters:
          content-target: true
      - name: basicapp-uaa
      - name: basicapp-destination-service
    build-parameters:
      build-result: resources
      requires:
        - name: basicapp
          artifacts:
            - basicapp.zip
          target-path: resources/
  - name: basicapp
    type: html5
    path: .
    build-parameters:
      builder: custom
      build-result: dist
      commands:
        - npm install
        - 'npm run build:cf'
      supported-platforms: []
resources:
  - name: basicapp-destination-service
    type: org.cloudfoundry.managed-service
    parameters:
      service: destination
      service-name: basicapp-destination-service
      service-plan: lite
      config:
        HTML5Runtime_enabled: false
        version: 1.0.0
        init_data:
          instance:
            existing_destinations_policy: update
            destinations:
              - Name: ui5
                Type: HTTP
                URL: 'https://ui5.sap.com'
                ProxyType: Internet
                Authentication: NoAuthentication
  - name: basicapp-uaa
    type: org.cloudfoundry.managed-service
    parameters:
      path: ./xs-security.json
      service: xsuaa
      service-name: basicapp-xsuaa-service
      service-plan: application
  - name: basicapp-app-front
    type: org.cloudfoundry.managed-service
    parameters:
      service: app-front
      service-name: basicapp-app-front-service
      service-plan: developer
"
`;

exports[`CF Writer App - Application Frontend Generate deployment configs - HTML5 App with app frontend approuter attached with no destination available 1`] = `
"_schema-version: '3.2'
ID: comfioritoolslrop
description: Generated by Fiori Tools
version: 0.0.1
parameters:
  enable-parallel-deployments: true
  deploy_mode: html5-repo
modules:
  - name: comfioritoolslrop-app-content
    type: com.sap.application.content
    path: .
    requires:
      - name: comfioritoolslrop-app-front
        parameters:
          content-target: true
      - name: comfioritoolslrop-uaa
      - name: comfioritoolslrop-destination-service
    build-parameters:
      build-result: resources
      requires:
        - name: comfioritoolslrop
          artifacts:
            - comfioritoolslrop.zip
          target-path: resources/
  - name: comfioritoolslrop
    type: html5
    path: .
    build-parameters:
      builder: custom
      build-result: dist
      commands:
        - npm install
        - 'npm run build:cf'
      supported-platforms: []
resources:
  - name: comfioritoolslrop-destination-service
    type: org.cloudfoundry.managed-service
    parameters:
      service: destination
      service-name: comfioritoolslrop-destination-service
      service-plan: lite
      config:
        HTML5Runtime_enabled: false
        version: 1.0.0
        init_data:
          instance:
            existing_destinations_policy: update
            destinations:
              - Name: ui5
                Type: HTTP
                URL: 'https://ui5.sap.com'
                ProxyType: Internet
                Authentication: NoAuthentication
  - name: comfioritoolslrop-uaa
    type: org.cloudfoundry.managed-service
    parameters:
      path: ./xs-security.json
      service: xsuaa
      service-name: comfioritoolslrop-xsuaa-service
      service-plan: application
  - name: comfioritoolslrop-app-front
    type: org.cloudfoundry.managed-service
    parameters:
      service: app-front
      service-name: comfioritoolslrop-app-front-service
      service-plan: developer
"
`;
